@@ -1,3 +1,8 @@
+2007-06-25  Hal Rosenstock <halr@voltaire.com>
+
+	* cl_event_wheel.c: Fix some typos in printfs when
+	  __CL_EVENT_WHEEL_TEST__ defined 
+
 2007-06-20  Hal Rosenstock <halr@voltaire.com>
 
 	* libosmcomp.map: Add get_next map functions as global
